tests/baselines/reference/enumWithExport.errors.txt
tests/cases/compiler/enumWithExport.ts(5,7): error TS2651: A member initializer in a enum declaration cannot reference members declared after it, including members defined in other enums.


==== tests/cases/compiler/enumWithExport.ts (1 errors) ====
    namespace x {
      export let y = 123
    }
    enum x {
      z = y
          ~
!!! error TS2651: A member initializer in a enum declaration cannot reference members declared after it, including members defined in other enums.
    }